# hotel-ink

./: README.md
hotel-ink-app/contracts/hotel_app/: Cargo.toml  lib.rs
hotel-ink-app/logics/: Cargo.toml
hotel-ink-app/logics/impls/: mod.rs
hotel-ink-app/logics/impls/hotel_app_logics/: hotel_app_logics.rs  mod.rs  types.rs
hotel-ink-app/logics/traits/: hotel_app_traits.rs  mod.rs
hotel-ink-sbt/: .gitignore
hotel-ink-sbt/contracts/hotel_sbt/: Cargo.toml  lib.rs
hotel-ink-sbt/logics/: Cargo.toml
hotel-ink-sbt/logics/impls/: mod.rs
hotel-ink-sbt/logics/impls/psp34_logics/: mod.rs  psp34_logics.rs  types.rs
hotel-ink-sbt/logics/impls/psp34_traits/: psp34_traits.rs
hotel-ink-sbt/logics/traits/: psp34_logics.rs  psp34_traits.rs
